tests/fixtures/invalid/none_mod_set.py
# Cannot modulo None and Set[int]
x: None = None % {1, 2, 3}
